--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,12 @@
 <html>
 <head>
   <title>Color Of A Genre Project</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Titan+One:ital,wght@0,400&display=swap" rel="stylesheet">
     <style>
-      </style>
+      @import url('https://fonts.googleapis.com/css2?family=Titan+One:ital,wght@0,400&display=swap');
+    </style>
 </head>
 <body>
   <div id="root"></div>
